--- a/docs/issues/2024-06.rst
+++ b/docs/issues/2024-06.rst
@@ -6,6 +6,13 @@ Lunch and Learn
 2024-05-07 `Gaussian Splatting on the Move: Blur and Rolling Shutter Compensation for Natural Camera Motion <https://arxiv.org/abs/2403.13327>`_
     `Gaussian Splatting Example: Key Bridge <https://voluma.ai/view/jack/test/baltimore>`_ `NERFStudio <https://github.com/nerfstudio-project/nerfstudio/?tab=readme-ov-file#dependencies>`
 
+2024-05-28
+    `Towards Monosemanticity: Decomposing Language Models With Dictionary Learning <https://transformer-circuits.pub/2023/monosemantic-features>`_
+        Researchers from Anthropic use sparse autoencoders to isolate monosemantic features with high sensitivity and specificity.
+    `Scaling Monosemanticity: Extracting Interpretable Features from Claude 3 Sonnet
+ <https://transformer-circuits.pub/2024/scaling-monosemanticity/>`_
+        Researchers from Anthropic apply their sparse autoencoder approach to interpretability to a ChatGPT-size model, revealing millions of both low-level and high-level features. They find that setting these features to extremely low/high values influences model behavior.
+
 Featured
 --------
 `KAN: Kolmogorov–Arnold Networks <https://arxiv.org/pdf/2404.19756>`_
