--- a/docs/issues/2024-06.rst
+++ b/docs/issues/2024-06.rst
@@ -1,24 +1,6 @@
 2024-06
 =======
 
-Lunch and Learn
----------------
-2024-05-07 `Gaussian Splatting on the Move: Blur and Rolling Shutter Compensation for Natural Camera Motion <https://arxiv.org/abs/2403.13327>`_
-    `Gaussian Splatting Example: Key Bridge <https://voluma.ai/view/jack/test/baltimore>`_ `NERFStudio <https://github.com/nerfstudio-project/nerfstudio/?tab=readme-ov-file#dependencies>`
-
-2024-05-21
-    `THE LANDSCAPE OF EMERGING AI AGENT ARCHITECTURES FOR REASONING, PLANNING, AND TOOL CALLING: A SURVEY <https://arxiv.org/pdf/2404.11584>`_
-        Researchers from Neudesic (IBM AI offshoot) look at a bunch of more recent AI Agent architectures and posit that this is the way the field will continue to head (tools instead of RAG).  They identify the importance of reasoning structures and useful tools, as well as the benefits and downsides of multi-agent approaches.  `Related slides <https://docs.google.com/presentation/d/1RF884dELODX-Yxqbx5J9qJIqEVhcmfLox_jcbc5eG0Q/edit?usp=sharing>`_.
-    `memary <https://github.com/kingjulio8238/memary>`_
-        Really interesting full implementation of an Agent based off of the ReAct architecture.  Uses a knolwedge graph for relating topics of conversation.  Definitely rough but surprsisingly good readme.
-
-2024-05-28
-    `Towards Monosemanticity: Decomposing Language Models With Dictionary Learning <https://transformer-circuits.pub/2023/monosemantic-features>`_
-        Researchers from Anthropic use sparse autoencoders to isolate monosemantic features with high sensitivity and specificity.
-
-    `Scaling Monosemanticity: Extracting Interpretable Features from Claude 3 Sonnet <https://transformer-circuits.pub/2024/scaling-monosemanticity/>`_
-        Researchers from Anthropic apply their sparse autoencoder approach to interpretability to a ChatGPT-size model, revealing millions of both low-level and high-level features. They find that setting these features to extremely low/high values influences model behavior.
-
 Featured
 --------
 `KAN: Kolmogorov–Arnold Networks <https://arxiv.org/pdf/2404.19756>`_
@@ -27,17 +9,18 @@ Featured
 `Scaling Monosemanticity: Extracting Interpretable Features from Claude 3 Sonnet <https://transformer-circuits.pub/2024/scaling-monosemanticity/index.html>`_
     The authors extract interpretable features from LLMs by using a sparse autoencoder.  These are abstract concepts spanning languages and modalities, and can be turned up or down to affect the behavior of the LLM.  Turning up "Golden Gate Bridge" to the max, for instance, makes the LLM think it is the Golden Gate Bridge. Worth a read, may be something like LLM Doctrinaire in here.
 
-`The Platonic Representation Hypothesis <https://arxiv.org/pdf/2405.07987>`_
-    The authors note that, over time and across vision and language modalities, as different types of Neural Networks get deeper they measure distance between datapoints in similar ways.  They tie this in with some philosophy stuff (Platonic forms, anyone?), but the intuition is that all models are attempting to represent reality, and as they grow larger they arrive ever closer to a "true" statistical representation of reality.
-
 `PLAN-SEQ-LEARN: LANGUAGE MODEL GUIDED RL FOR SOLVING LONG HORIZON ROBOTICS TASKS <https://arxiv.org/pdf/2405.01534>`_
     Mistral and Carnegie Mellon think you can put LLMs in charge of robots for high-level planning, and let more standard reinforcement learning algorithms take care of the rest.  Does make a decent amount of sense, but you have to be real careful about what the LLM decides to have the robot do.
 
 `Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization <https://arxiv.org/pdf/2405.15071>`_
-    Transformers are bad at implicit reasoning over parametric knowledge, unless you train them beyond the realm of overfitting in which case they become good at it.  Teh authors all this grokking, but the really dangerous implication is that transformers and LLMs have not been trained enough
+    Transformers are bad at implicit reasoning over parametric knowledge, unless you train them beyond the realm of overfitting in which case they become good at it.  The authors all this grokking, but the really dangerous implication is that transformers and LLMs have not been trained enough and are actually underfit!
 
-`Detect Everything with Few Examples<https://arxiv.org/abs/2309.12969>`_
+`Detect Everything with Few Examples <https://arxiv.org/abs/2309.12969>`_
     This is a good idea. It's basically grounding dino but with a specially classifier layer to label 10-100 examples have everything work without fine tuning. We should really consider using this approach going forward.
+
+`What We Learned from a Year of Building with LLMs (Part I) <https://www.oreilly.com/radar/what-we-learned-from-a-year-of-building-with-llms-part-i/>`_
+    This is a great summary of experiences and recommendations when trying to build things with LLMs. Well worth the read.
+
 
 LLM Applications
 ----
@@ -52,6 +35,9 @@ LLM Applications
 
 `Large language models can be zero-shot anomaly detectors for time series? <https://arxiv.org/pdf/2405.14755>`_
     If you configure them right, LLMs can detet anomolies in time series.  This invovle turning time series data into text data and a "prompt-based detection method" for anomoly detection.  Given the sequential nature of transformers, this seems like a cool use case.
+
+`What We Learned from a Year of Building with LLMs (Part I) <https://www.oreilly.com/radar/what-we-learned-from-a-year-of-building-with-llms-part-i/>`_
+    This is a great summary of experiences and recommendations when trying to build things with LLMs. Well worth the read.
 
 LLM Theory
 ----------
@@ -72,6 +58,9 @@ LLM Theory
 
 `Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization <https://arxiv.org/pdf/2405.15071>`_
     Transformers are bad at implicit reasoning over parametric knowledge, unless you train them beyond the realm of overfitting in which case they become good at it.  Teh authors all this grokking, but the really dangerous implication is that transformers and LLMs have not been trained enough
+
+`Visual Perception by Large Language Model’s Weights <https://arxiv.org/pdf/2405.20339>`_
+    Existing vision LLMs function by pasting visual and text tokens together.  Instead of doing that, this paper uses an encoder to turn pictures into LLM weight and just puts them directly into the LLM.
 
 Doctrinaire
 -----------
@@ -136,8 +125,6 @@ Gaussian Splatting
 `HoloGS: Instant Depth-based 3D Gaussian Splatting with Microsoft HoloLens 2 <https://arxiv.org/pdf/2405.02005>`_
     This paper gets Gaussian splatting up and running on a Hololens.  Results look pretty decent.  Something to keep in mind if we ever get back to working with it again.
 
-FPGA
-----
 
 Reasoning/Knowledge Graphs
 --------------------------
@@ -179,3 +166,23 @@ New Models
 
 `Detect Everything with Few Examples <https://arxiv.org/abs/2309.12969>`_
     This is a good idea. It's basically grounding dino but with a specially classifier layer to label 10-100 examples have everything work without fine tuning. We should really consider using this approach going forward.
+
+
+Lunch and Learn
+---------------
+2024-05-07 `Gaussian Splatting on the Move: Blur and Rolling Shutter Compensation for Natural Camera Motion <https://arxiv.org/abs/2403.13327>`_
+    `Gaussian Splatting Example: Key Bridge <https://voluma.ai/view/jack/test/baltimore>`_ 
+    `NERFStudio <https://github.com/nerfstudio-project/nerfstudio/?tab=readme-ov-file#dependencies>`
+
+2024-05-21
+    `THE LANDSCAPE OF EMERGING AI AGENT ARCHITECTURES FOR REASONING, PLANNING, AND TOOL CALLING: A SURVEY <https://arxiv.org/pdf/2404.11584>`_
+        Researchers from Neudesic (IBM AI offshoot) look at a bunch of more recent AI Agent architectures and posit that this is the way the field will continue to head (tools instead of RAG).  They identify the importance of reasoning structures and useful tools, as well as the benefits and downsides of multi-agent approaches.  `Related slides <https://docs.google.com/presentation/d/1RF884dELODX-Yxqbx5J9qJIqEVhcmfLox_jcbc5eG0Q/edit?usp=sharing>`_.
+    `memary <https://github.com/kingjulio8238/memary>`_
+        Really interesting full implementation of an Agent based off of the ReAct architecture.  Uses a knolwedge graph for relating topics of conversation.  Definitely rough but surprsisingly good readme.
+
+2024-05-28
+    `Towards Monosemanticity: Decomposing Language Models With Dictionary Learning <https://transformer-circuits.pub/2023/monosemantic-features>`_
+        Researchers from Anthropic use sparse autoencoders to isolate monosemantic features with high sensitivity and specificity.
+
+    `Scaling Monosemanticity: Extracting Interpretable Features from Claude 3 Sonnet <https://transformer-circuits.pub/2024/scaling-monosemanticity/>`_
+        Researchers from Anthropic apply their sparse autoencoder approach to interpretability to a ChatGPT-size model, revealing millions of both low-level and high-level features. They find that setting these features to extremely low/high values influences model behavior.
